apps/external-apps/homepage-local/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-local
  namespace: external-apps
spec:
  type: ExternalName
  ports:
    - name: http
      port: 8003
      targetPort: 8003
  externalName: 10.69.1.51
