apps/external-apps/homepage-local/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-local
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-local
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-cvsickle-com-tls
  routes:
    - match: Host(`home.local.cvsickle.com`)
      kind: Rule
      services:
        - name: homepage-local
          namespace: external-apps
          port: 8003
